--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -18,6 +18,9 @@
                 </div>
                 <div class="navbar-menu" id="header-menu">
                     <div class="navbar-end">
+                        <a class="navbar-item" href="javaScript:void(0);" id="btn-toggle-dark">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+                        </a>
                         <% for (let item of theme.menubar) { %>
                             <a class="navbar-item is-uppercase" href="<%= item[0] %>">
                                 <%= item[1] %>
