chore: replace jsDelivr CDN ...
... with something faster (least in Mainland China?)

--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -1,7 +1,7 @@
 <!-- Lazyload support -->
 <%- js('js/script.min.js') %>
 <% if (theme.lazyload) { %>
-    <script async defer src="https://cdn.jsdelivr.net/npm/vanilla-lazyload/dist/lazyload.min.js"></script>
+    <script async defer src="https://cdn.staticfile.org/vanilla-lazyload/17.3.1/lazyload.min.js"></script>
     <script>
         window.lazyLoadOptions = {
             elements_selector: ".lazy",
@@ -18,9 +18,9 @@
 <!-- Highlight.js support -->
 <% if (theme.highlight.enable === true) { %> 
     <link media="none" onload="media='all'" id="highlight-light-theme" rel="stylesheet" 
-        href="https://cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/<%= theme.highlight.lightmode %>.min.css">
+        href="https://cdn.staticfile.org/highlight.js/9.16.2/styles/<%= theme.highlight.lightmode %>.min.css">
     <link media="none" onload="media='all'" id="highlight-dark-theme" rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/<%= theme.highlight.darkmode %>.min.css">
+        href="https://cdn.staticfile.org/highlight.js/9.16.2/styles/<%= theme.highlight.darkmode %>.min.css">
     <script>
         window.addEventListener("load", () => {
             const theme_selector = (mode) => {
@@ -50,4 +50,4 @@
 
 <!-- Font Awesome delay loading -->
 <link rel="preload" as="style" onload="this.rel='stylesheet'" rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+    href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
